Link group to a scene > Make single user (Object) = Glitches #39969

Closed
opened 2014-04-30 14:27:55 +02:00 by Paweł Łyczkowski · 14 comments

System Information
Windows 8.1

Blender Version
2.70a

Short description of error
Link group to a scene > Make single user (Object) = Glitches (color stays green, bone custom shapes do not update)

Exact steps for others to reproduce the error
Default scene > Add Cube to a group > Add new empty scene > Link Cube to the new scene > In the new scene run Make Single User (Object) on the Cube > Deselect Cube, select it again > The color of the outline is still green, even though the Cube does not belong to a group.

If you do that with an armature that uses custom bone shapes, the bones that have the custom shapes stop responding and stay in place when you move the armature.

Reloading the file fixes both problems.

**System Information** Windows 8.1 **Blender Version** 2.70a **Short description of error** Link group to a scene > Make single user (Object) = Glitches (color stays green, bone custom shapes do not update) **Exact steps for others to reproduce the error** Default scene > Add Cube to a group > Add new empty scene > Link Cube to the new scene > In the new scene run Make Single User (Object) on the Cube > Deselect Cube, select it again > The color of the outline is still green, even though the Cube does not belong to a group. If you do that with an armature that uses custom bone shapes, the bones that have the custom shapes stop responding and stay in place when you move the armature. Reloading the file fixes both problems.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PawelLyczkowski-1

Added subscriber: @PawelLyczkowski-1

Also, with armature that uses custom shapes, the shapes are placed incorrectly, and reloading the file does not fix this.

EDIT: Actually, scratch that, it seems that the "bone that defines the display transform of this custom shape" is not copied over in this operation. Inspecting.

Also, with armature that uses custom shapes, the shapes are placed incorrectly, and reloading the file *does not* fix this. EDIT: Actually, scratch that, it seems that the "bone that defines the display transform of this custom shape" is not copied over in this operation. Inspecting.

Ah, found it. (The first bug is still valid)

Exact steps for others to reproduce the error
Delete default Cube > Add armature > Add new bone in the armature (so there are 2) > Add torus > Select Bone in pose mode, set it's display shape to Torus, set the At property of the display shape to Bone.001 > Add Armature to a new group > Link to a new scene > In the new scene run Make Single User (Object) on the Armature > Save File > Reload File > The At property of the display shape in the armature in the second scene is now empty.

Ah, found it. (The first bug is still valid) **Exact steps for others to reproduce the error** Delete default Cube > Add armature > Add new bone in the armature (so there are 2) > Add torus > Select Bone in pose mode, set it's display shape to Torus, set the At property of the display shape to Bone.001 > Add Armature to a new group > Link to a new scene > In the new scene run Make Single User (Object) on the Armature > Save File > Reload File > The At property of the display shape in the armature in the second scene is now empty.

Added subscriber: @willi-2

Added subscriber: @willi-2

Confirmed (Win7/64).

I've noticed this about "make single user":

  • The problem is there if you press the "2" (number of users) next to the object name in the object menu.
  • Instead, If I use the spacebar menu and select make single user, it does not occur.

Still worked in Blender 2.58
Broken since 2.63(a)

Confirmed (Win7/64). I've noticed this about "make single user": - The problem is there if you press the "2" (number of users) next to the object name in the object menu. - Instead, If I use the spacebar menu and select make single user, it does not occur. Still worked in Blender 2.58 Broken since 2.63(a)

Addition: Just found out that spacebar menu -> make single user does not do anything in this situation, hence the difference to clicking the "2" button.
Anyway, it's confirmed for the latter since 2.63.

Addition: Just found out that spacebar menu -> make single user does not do anything in this situation, hence the difference to clicking the "2" button. Anyway, it's confirmed for the latter since 2.63.

@willi-2

I use Object > Make Single User > Object

@willi-2 I use Object > Make Single User > Object

This issue was referenced by blender/blender-addons-contrib@d50f8832e3

This issue was referenced by blender/blender-addons-contrib@d50f8832e39f79a9a2477ddb2e26dd2c801dbc8f

This issue was referenced by d50f8832e3

This issue was referenced by d50f8832e39f79a9a2477ddb2e26dd2c801dbc8f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d50f8832e3.

Closed by commit d50f8832e3.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

fixed group color issue: 2ce3e4639a

fixed group color issue: 2ce3e4639a
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39969
No description provided.