Fix T39969: Make single user object looses custom-tx-bone