source/blender/blenkernel/intern/action.c
@@ -600,6 +600,11 @@ void BKE_pose_copy_data(bPose **dst, bPose *src, const bool copy_constraints)
 			id_us_plus(&pchan->custom->id);
 		}
 
+		/* warning, O(n2) here, but it's a rarely used feature. */
+		if (pchan->custom_tx) {
+			pchan->custom_tx = BKE_pose_channel_find_name(outPose, pchan->custom_tx->name);
+		}
+
 		if (copy_constraints) {
 			BKE_constraints_copy(&listb, &pchan->constraints, true);  // BKE_constraints_copy NULLs listb
 			pchan->constraints = listb;
